--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "dependencies": {
     "axios": "^1.3.4",
     "debug": "^4.3.4",
+    "jsonic": "^1.0.1",
     "lodash": "^4.17.21",
     "openai": "^3.2.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/debug": "^4.1.7",
+    "@types/jsonic": "^0.3.1",
     "@types/lodash": "^4.14.191"
   }
 }
