--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "llama-flow",
   "packageManager": "yarn@3.4.1",
+  "scripts": {
+    "build": "tsc",
+    "lint": "eslint src --ext ts,tsx,js,jsx --ignore-path .gitignore --fix"
+  },
   "dependencies": {
     "axios": "^1.3.4",
     "debug": "^4.3.4",
@@ -12,6 +16,7 @@
   "devDependencies": {
     "@types/debug": "^4.1.7",
     "@types/jsonic": "^0.3.1",
-    "@types/lodash": "^4.14.191"
+    "@types/lodash": "^4.14.191",
+    "eslint": "^8.36.0"
   }
 }
