--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/debug": "^4.1.7",
     "@types/jsonic": "^0.3.1",
     "@types/lodash": "^4.14.191",
-    "eslint": "^8.36.0"
+    "eslint": "^8.36.0",
+    "typescript": "^5.0.2"
   }
 }
