--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "llama-flow",
   "packageManager": "yarn@3.4.1",
   "scripts": {
+    "prepare": "husky install",
     "build": "tsc --build --pretty",
     "lint": "eslint src --ext ts,tsx,js,jsx --ignore-path .gitignore --fix"
   },
