--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "postinstall": "husky install",
     "build": "tsc --build --pretty",
     "lint": "eslint src --ext ts,tsx,js,jsx --ignore-path .gitignore --fix",
-    "test": "jest --passWithNoTests"
+    "test": "jest --passWithNoTests",
+    "playground": "node --loader ts-node/esm src/examples/playground"
   },
   "dependencies": {
     "axios": "^1.3.4",
@@ -62,6 +63,7 @@
     "lint-staged": "^13.2.0",
     "prettier": "^2.8.0",
     "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.2"
   },
   "lint-staged": {
