--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "build": "tsc --build --pretty",
     "lint": "eslint src --ext ts,tsx,js,jsx --ignore-path .gitignore --fix",
     "test": "jest --passWithNoTests",
-    "playground": "node --loader ts-node/esm src/examples/playground"
+    "playground": "node -r tsconfig-paths/register -r ts-node/register src/examples/playground"
   },
   "dependencies": {
     "axios": "^1.3.4",
