--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "llama-flow",
   "description": "The Typescript-first prompt engineering toolkit for working with chat based LLMs.",
-  "version": "0.5.1",
+  "version": "0.5.2",
   "packageManager": "yarn@3.4.1",
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
@@ -46,6 +46,7 @@
     "jsonic": "^1.0.1",
     "lodash": "^4.17.21",
     "openai": "^3.2.1",
+    "tiktoken-node": "^0.0.6",
     "zod": "^3.21.4"
   },
   "peerDependencies": {
