--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "llama-flow",
   "description": "The Typescript-first prompt engineering toolkit for working with chat based LLMs.",
-  "version": "0.8.4",
+  "version": "0.9.0",
   "packageManager": "yarn@3.4.1",
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
@@ -43,10 +43,10 @@
   "dependencies": {
     "axios": "^1.3.4",
     "debug": "^4.3.4",
+    "js-tiktoken": "^1.0.7",
     "jsonic": "^1.0.1",
     "lodash": "^4.17.21",
     "openai": "^3.2.1",
-    "tiktoken-node": "^0.0.6",
     "zod": "^3.21.4"
   },
   "peerDependencies": {
