--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "js-tiktoken": "^1.0.7",
     "jsonic": "^1.0.1",
     "lodash": "^4.17.21",
-    "openai": "^3.2.1",
+    "openai-edge": "^1.1.0",
     "zod": "^3.21.4"
   },
   "peerDependencies": {
