--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "lint": "eslint src --ext ts,tsx,js,jsx --ignore-path .gitignore --fix",
     "test": "jest --passWithNoTests",
     "test:update": "jest -u --passWithNoTests",
-    "playground": "node -r tsconfig-paths/register -r ts-node/register playground"
+    "benchmark": "node -r tsconfig-paths/register -r ts-node/register benchmark"
   },
   "dependencies": {
     "axios": "^1.3.4",
